unpackaged/main/default/objects/ET_Work_force__c/ET_Work_force__c.object-meta.xml
<CustomObject>
    <label>Work force Request</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Work force Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work force Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>