unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Accountant_Category__c.field-meta.xml
<CustomField>
    <fullName>ET_Accountant_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accountant/Cashier  Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>