unpackaged/main/default/objects/ET_Work_force__c/fields/ET_No_of_Drivers__c.field-meta.xml
<CustomField>
    <fullName>ET_No_of_Drivers__c</fullName>
    <label>No of Drivers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>