unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Number_of_Nannies__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Nannies__c</fullName>
    <label>Number of Nannies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>