unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Other_employee_Category__c.field-meta.xml
<CustomField>
    <fullName>ET_Other_employee_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other employee Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>