unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Method__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Comprehensive Price per Quotation</fullName>
            </value>
            <value>
                <fullName>Comprehensive Price per Line</fullName>
            </value>
            <value>
                <fullName>Comprehensive Price per Route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>