unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Pricing_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Service_Request__c</fullName>
    <label>Pricing Service Request</label>
    <referenceTo>ET_Pricing_Service_Request__c</referenceTo>
    <relationshipLabel>Work force Requests</relationshipLabel>
    <relationshipName>Work_force_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>