unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ET_Pricing_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Price</fullName>
            </value>
            <value>
                <fullName>Monthly Price</fullName>
            </value>
            <value>
                <fullName>Per student</fullName>
            </value>
            <value>
                <fullName>Per route</fullName>
            </value>
            <value>
                <fullName>Per KM</fullName>
            </value>
            <value>
                <fullName>Per ton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>