unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Service_Request_Common_Data__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Request_Common_Data__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Request Common Data</label>
    <referenceTo>ET_Service_Request_Common_Data__c</referenceTo>
    <relationshipLabel>Work force Requests</relationshipLabel>
    <relationshipName>Work_force_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>