unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ET_Oracle_Pricing_Service_Types</valueSetName>
    </valueSet>
</CustomField>