unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>ET_Special_Requirements__c</fullName>
    <label>Special requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>