unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Target_Price__c</fullName>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>