unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Workforce_Line_Info__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_Line_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Line Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>