unpackaged/main/default/objects/ET_Work_force__c/fields/ET_Workforce_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_Workforce_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workforce Record Type Name</label>
    <type>Text</type>
</CustomField>