unpackaged/main/default/objects/ET_Work_force__c/fields/Reliever_For__c.field-meta.xml
<CustomField>
    <fullName>Reliever_For__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reliever For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>