unpackaged/main/default/objects/ET_Work_force__c/fields/Total_Student_Per_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Per_Passenger__c</fullName>
    <description>__c</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Student Per Passenger</label>
    <length>234</length>
    <type>Text</type>
</CustomField>