unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Accountant_Cashier.recordType-meta.xml
<RecordType>
    <fullName>ET_Accountant_Cashier</fullName>
    <active>true</active>
    <label>Accountant/Cashier</label>
</RecordType>