unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Coordinator.recordType-meta.xml
<RecordType>
    <fullName>ET_Coordinator</fullName>
    <active>true</active>
    <label>Coordinator</label>
</RecordType>