unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Driver.recordType-meta.xml
<RecordType>
    <fullName>ET_Driver</fullName>
    <active>true</active>
    <label>Driver</label>
</RecordType>