unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Nanny.recordType-meta.xml
<RecordType>
    <fullName>ET_Nanny</fullName>
    <active>true</active>
    <label>Nanny</label>
</RecordType>