unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Other_Employee.recordType-meta.xml
<RecordType>
    <fullName>ET_Other_Employee</fullName>
    <active>true</active>
    <label>Other Employee</label>
</RecordType>