unpackaged/main/default/objects/ET_Work_force__c/recordTypes/ET_Supervisor.recordType-meta.xml
<RecordType>
    <fullName>ET_Supervisor</fullName>
    <active>true</active>
    <label>Supervisor</label>
</RecordType>